fix spacing for post header images

--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -82,7 +82,7 @@ header {
   display: block;
   margin: auto;
   max-width: 800px;
-  padding: 2em 0 1em 0;
+  padding: 0 0 1em 0;
   @media (max-width: 1000px) {
     padding: 5%;
   }
